<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <EditText
    android:id="@+id/Username_Login"
    android:layout_width="314dp"
    android:layout_height="67dp"
    android:layout_marginTop="260dp"
    android:autofillHints=""
    android:drawableStart="@drawable/icon_username"
    android:ems="10"
    android:hint="@string/enter_username_here"
    android:inputType="textPersonName"
    android:textColor="#9F9898"
    android:textColorHint="#DF958E8E"
    android:backgroundTint="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="313dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"
        android:textColor="#9F9898"
        android:textColorHint="#DF958E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_Login" />

    <Button
        android:id="@+id/login"
        android:layout_width="309dp"
        android:layout_height="34dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_text_forbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textforegisterTxtView"
        android:textColor="#DF958E8E"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:background="#00000000"
        android:onClick="launchRegistrationScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.263" />
</androidx.constraintlayout.widget.ConstraintLayout>